<resources>

    <!-- GENERAL -->
    <string name="app_name">MyMeteo</string>
    <string name="app_subtitle">FFHS - ESA - 2017</string>

    <string name="navigation_drawer_open">Menu zeigen</string>
    <string name="navigation_drawer_close">Menu ausblenden</string>

    <string name="action_settings">Einstellungen</string>


    <!-- SIDEBAR -->
    <string name="menu_home">Home</string>
    <string name="menu_suche">Suche</string>
    <string name="menu_favoriten">Favoriten</string>
    <string name="menu_topplaces">Top Orte</string>
    <string name="menu_einstellungen">Einstellungen</string>
    <string name="menu_hilfe">Hilfe</string>
    <string name="menu_about">About</string>

    <!-- HOME -->
    <string name="textPosition">Deine Position:</string>

    <!-- WebCamActivity -->
    <string name="title_activity_web_cam">WebCam</string>

    <!-- ImageCrawler -->
    <string name="title_activity_imagecrawler">Bilder</string>

    <!-- Suche -->
    <string name="title_activity_suche">Suche</string>

    <!-- hilfe -->
    <string name="title_activity_hilfe">Hilfe</string>
    <string name="hilfetext">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</string>

    <!-- About -->
    <string name="title_activity_about">About</string>
    <string name="abouttext">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</string>
    <string name="btn_Home_Suche">Suche starten</string>

    <!-- SBB -->
    <string name="title_activity_sbb">Zugverbindungen</string>

    <!-- Flug -->
    <string name="title_activity_flug">Flugverbindungen</string>

    <!-- Routenplanung -->
    <string name="title_activity_route">Routenplanung</string>

</resources>
