<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_action_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_suche"
            android:icon="@drawable/ic_action_suche"
            android:title="@string/menu_suche" />
        <item
            android:id="@+id/nav_favoriten"
            android:icon="@drawable/ic_action_favoriten"
            android:title="@string/menu_favoriten" />
        <item
            android:id="@+id/nav_topplaces"
            android:icon="@drawable/ic_action_topplaces"
            android:title="@string/menu_topplaces" />
        <item
            android:id="@+id/nav_einstellungen"
            android:icon="@drawable/ic_action_einstellungen"
            android:title="@string/menu_einstellungen" />
    </group>

    <item android:title="@string/menu_about">
        <menu>
            <item
                android:id="@+id/nav_hilfe"
                android:icon="@drawable/ic_action_hilfe"
                android:title="@string/menu_hilfe" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_action_about"
                android:title="@string/menu_about" />
        </menu>
    </item>

</menu>
